# parseVRS

./: .gitignore  LICENSE  README.md  parseVRS.cabal
src/: GeomStaticMesh.hs  Node.hs  Parser.hs  Types.hs
src/Parser/: GeomStaticMesh.hs  Internal.hs  Node.hs  Util.hs  VRScene.hs
src/Types/: GeomStaticMesh.hs  Internal.hs  Node.hs  VRScene.hs
test/: ParserSpec.hs
