name:                parseVRS
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/leohaskell/parseVRS#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Taskoff
maintainer:          daniel.taskoff@gmail.com
copyright:           2016 Daniel Taskoff
category:            Library, Parsing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Parser
                   , Types
                   , Node
                   , GeomStaticMesh
  default-language:  Haskell2010
  
  build-depends:     base       >= 4.7      && < 5
                   , attoparsec >= 0.13.0.1 && < 0.13.1
                   , text       >= 1.2.2.1  && < 1.2.3
                   , array      >= 0.5.1.0  && < 0.5.2
  
  ghc-options:       -Wall -fwarn-tabs -O
